test/classes/initializers/compilerGenerated/generics/withParamTypeNoDefNoArgsInCall.good
withParamTypeNoDefNoArgsInCall.chpl:5: error: unresolved call 'Foo.init()'
withParamTypeNoDefNoArgsInCall.chpl:1: note: this candidate did not match: Foo.init(param p: bool)
withParamTypeNoDefNoArgsInCall.chpl:5: note: because call does not supply enough arguments
withParamTypeNoDefNoArgsInCall.chpl:2: note: it is missing a value for formal 'param p: bool'
